--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "queprocess",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "This will execute the process one by one",
   "main": "index.js",
   "scripts": {},
   "keywords": ["syncProcess", "QueProcess"],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rdev06/uldb.git"
+    "url": "https://github.com/rdev06/queProcess.git"
   },
   "author": "Roshan Dev",
   "license": "ISC"
